# OKRio

./: .env.example  .gitignore  Dockerfile  Dockerfile.example  README.md  docker-compose.yml  docker-compose.yml.example
backend/: Dockerfile  Dockerfile.example  README.md  alembic.ini  pyproject.toml  requirements.locked.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_add_data_selection_logs.py
backend/app/: __init__.py  main.py
backend/app/core/: celery_app.py  config.py  database.py
backend/app/models/: __init__.py
backend/app/modules/accounts/: router.py
backend/app/modules/analytics/: router.py  tasks.py
backend/app/modules/auth/: directory.py  router.py  schemas.py  scim_router.py
backend/app/modules/auth/services/: __init__.py  azure.py
backend/app/modules/data_connectors/: __init__.py  base.py  exceptions.py  journal.py  models.py  ms_graph_excel.py  postgres.py  router.py  tasks.py
backend/app/modules/integrations/: router.py
backend/app/modules/notifications/: router.py  tasks.py
backend/app/modules/okr/: router.py
backend/app/modules/org/: router.py
backend/app/modules/workflow/: router.py  schemas.py  service.py
backend/app/schemas/: health.py
backend/app/services/: access_policies.py  file_storage.py
backend/tests/: conftest.py
backend/tests/modules/auth/: test_directory.py
backend/tests/modules/workflow/: test_workflow_serialisation.py
docs/: architecture.md  docker-compose-guide.md
frontend/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  (+1 more)
(+24 files in other folders)
